--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Личный кабинет</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
-$END$
+<h2>Добро пожаловать в личный кабинет!</h2>
+<p>Ваши данные: (здесь будут отображаться данные пользователя)</p>
+
+<div id="nutritionInfo"></div> <!-- Здесь появится меню -->
+
+<div id="userInfo"></div>
 </body>
 </html>
