--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Регистрация</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-$END$
+<div class="container">
+    <h2>Регистрация</h2>
+    <form id="registerForm">
+        <input type="text" id="username" placeholder="Имя пользователя" required>
+        <input type="password" id="password" placeholder="Пароль" required>
+        <input type="number" id="age" placeholder="Возраст">
+        <input type="number" id="weight" placeholder="Вес">
+        <select id="activityLevel">
+            <option value="низкая">Низкая</option>
+            <option value="средняя">Средняя</option>
+            <option value="высокая">Высокая</option>
+        </select>
+        <button type="submit">Зарегистрироваться</button>
+    </form>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
