--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -1,17 +1,18 @@
+
+
 <!DOCTYPE html>
+<link rel="stylesheet" href="styles.css">
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Личный кабинет</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+  <meta charset="UTF-8">
+  <title>Личный кабинет</title>
 </head>
 <body>
-<h2>Добро пожаловать в личный кабинет!</h2>
-<p>Ваши данные: (здесь будут отображаться данные пользователя)</p>
+<h1>Личный кабинет</h1>
+<div id="userInfo">Загрузка данных...</div>
+<div id="nutritionInfo"></div>
+<button id="generateMenu">Сгенерировать рацион</button>
 
-<div id="nutritionInfo"></div> <!-- Здесь появится меню -->
-
-<div id="userInfo"></div>
+<script src="script.js"></script>
 </body>
 </html>
