--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
+<link rel="stylesheet" href="styles.css">
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Вход</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Вход</title>
 </head>
 <body>
-<div class="container">
-    <h2>Вход</h2>
-    <form id="loginForm">
-        <input type="text" id="loginUsername" placeholder="Имя пользователя" required>
-        <input type="password" id="loginPassword" placeholder="Пароль" required>
-        <button type="submit">Войти</button>
-    </form>
-</div>
+<h1>Вход</h1>
+<form id="loginForm">
+  <input type="text" id="username" placeholder="Имя пользователя" required><br>
+  <input type="password" id="password" placeholder="Пароль" required><br>
+  <button type="submit">Войти</button>
+</form>
+
 <script src="script.js"></script>
 </body>
 </html>
